--- a/app/src/main/res/menu/menu_main.xml
+++ b/app/src/main/res/menu/menu_main.xml
@@ -1,7 +1,8 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
-    tools:context="com.example.unbrokebudgetapplication.MainActivity">
+    xmlns:tools="http://schemas.android.com/tools">
+<!--    tools:context="com.example.unbrokebudgetapplication.MainActivity">-->
+
 <!--    <item-->
 <!--        android:id="@+id/action_settings"-->
 <!--        android:orderInCategory="100"-->
