--- a/app/src/main/res/layout/fragment_3rd_budget_guide.xml
+++ b/app/src/main/res/layout/fragment_3rd_budget_guide.xml
@@ -63,4 +63,15 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/budget2_desc" />
 
+    <Button
+        android:id="@+id/back_button_3rdBudget"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="15dp"
+        android:background="@drawable/rounded_box_grey"
+        android:text="Back"
+        android:textAllCaps="false"
+        app:layout_constraintStart_toStartOf="@+id/budget2_desc"
+        app:layout_constraintTop_toBottomOf="@+id/imageView2" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
