--- a/app/src/main/res/drawable/rounded_box_grey.xml
+++ b/app/src/main/res/drawable/rounded_box_grey.xml
@@ -2,7 +2,7 @@
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
     <item>
         <shape android:shape="rectangle">
-            <solid android:color="#1f505b"/>
+            <solid android:color="#adb5bd"/>
             <corners android:radius="20dp"/>
         </shape>
     </item>>
