--- a/app/src/main/res/layout/fragment_2nd_budget_guide.xml
+++ b/app/src/main/res/layout/fragment_2nd_budget_guide.xml
@@ -120,4 +120,27 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/top_budget" />
 
+    <Button
+        android:id="@+id/use_button_budget2"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="15dp"
+        android:background="@drawable/rounded_box_green"
+        android:text="Use this"
+        android:textAllCaps="false"
+        app:layout_constraintEnd_toEndOf="@+id/budget_want_desc"
+        app:layout_constraintTop_toBottomOf="@+id/budget_want_desc" />
+
+    <Button
+        android:id="@+id/back_button_2ndBudget"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="15dp"
+        android:background="@drawable/rounded_box_grey"
+        android:text="Back"
+        android:textAllCaps="false"
+        app:layout_constraintStart_toStartOf="@+id/budget_wants"
+        app:layout_constraintTop_toBottomOf="@+id/budget_want_desc" />
+
+
 </androidx.constraintlayout.widget.ConstraintLayout>
