--- a/app/src/main/res/layout/activity_main_screen.xml
+++ b/app/src/main/res/layout/activity_main_screen.xml
@@ -8,7 +8,11 @@
     tools:context=".MainScreen"
     android:fitsSystemWindows="true">
 
-
+    <ScrollView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:fillViewport="true"
+        android:scrollbars="vertical"/>
     <FrameLayout
         android:id="@+id/main_frame2"
         android:layout_width="match_parent"
@@ -20,6 +24,7 @@
         android:layout_marginRight="0dp"
         android:layout_marginBottom="0dp"
         android:background="@color/black"/>
+
     <TextView
         android:id="@+id/test"
         android:layout_width="match_parent"
